Fixed paragraph text to be smaller on all devices; Fixed function.js so resizing on mobile works properly

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ html, body {
   font-family: 'Raleway', sans-serif;
   height: 100%;
   text-align: center;
+  font-size: 5vw;
 }
 
 #bioTextEnd  {
@@ -95,6 +96,7 @@ html, body {
   font-family: 'Raleway', sans-serif;
   height: 100%;
   line-height: 175%;
+  font-size: 5vw;
 }
 
 .allBtn {
@@ -195,7 +197,7 @@ html, body {
   }
 
   #bioText, #bioTextEnd {
-    font-size: 24px;
+    font-size: 3vw;
   }
 
   #workCover {
@@ -210,7 +212,7 @@ html, body {
 
 @media screen and (min-width: 1200px) {
   #bioCover {
-    height: 120vw;
+    height: 110vw;
   }
 
   #bioImg img {
@@ -220,6 +222,7 @@ html, body {
 
   #bioText, #bioTextEnd {
     margin: -60vw 0 0 1vw;
+    font-size: 2vw;
   }
 
   .allBtn {
